--- a/cadastro-01/WebContent/WEB-INF/web.xml
+++ b/cadastro-01/WebContent/WEB-INF/web.xml
@@ -6,4 +6,12 @@
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
   
+  <context-param>
+  	<param-name>
+  		javax.servlet.jsp.jstl.fmt.localizationContext
+  	</param-name>
+  	<param-value>messages</param-value>
+  </context-param>
+  
+  
 </web-app>
